Closed Bug 945532 Opened 11 years ago Closed 11 years ago

Bug 938686 broke non-unified builds

Categories

(Core :: Audio/Video, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla28
Tracking Status
firefox28 --- fixed

People

(Reporter: glandium, Assigned: glandium)

References

Details

(Whiteboard: [qa-])

Attachments

(2 files)

content/media/ogg/OpusParser.cpp:70:16: error: use of undeclared identifier 'LEUint16'

and

content/media/ogg/OpusParser.cpp:181:5: error: use of undeclared identifier 'mTags'
(which, actually comes from error: unknown type name 'nsTArray' and error: unknown type name 'nsCString')
For whoever comes first.
Attachment #8341410 - Flags: review?(roc)
Attachment #8341410 - Flags: review?(kinetik)
Assignee: nobody → mh+mozilla
Status: NEW → ASSIGNED
Attachment #8341411 - Flags: review?(roc)
Attachment #8341411 - Flags: review?(kinetik)
Attachment #8341411 - Flags: review?(giles)
Attachment #8341410 - Flags: review?(giles)
Attachment #8341410 - Flags: review?(kinetik) → review+
Attachment #8341411 - Flags: review?(kinetik) → review+
Comment on attachment 8341410 [details] [diff] [review]
Kill LE* functions in OggCodecState.cpp and use Endian.h functions instead

Review of attachment 8341410 [details] [diff] [review]:
-----------------------------------------------------------------

Matthew's review suffices.
Attachment #8341410 - Flags: review?(roc)
Attachment #8341410 - Flags: review?(giles)
https://hg.mozilla.org/mozilla-central/rev/f729bbb4cc7d
https://hg.mozilla.org/mozilla-central/rev/357c5de8547b
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla28
Whiteboard: [qa-]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: